--- a/Aula2/index.html
+++ b/Aula2/index.html
@@ -3,9 +3,32 @@
 <head>
     <meta  charset="UTF-8">
     <meta name="viewport" content="width=device-width initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Aula introdução a HTML - CSS</title>
 </head>
     <body>
-        <h1>Hello, World!</h1>
+        <header id="header-principal">
+            <img src="icon-gato.jpg" alt="icon-ghost" width="56px">
+            <h3 id="header-title">Tayka's Place</h3>
+        </header>
+
+        <h1 class="h1-hello">Hello, World!</h1>
+        <p class="lorem-p">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, atque adipisci <br>
+            At unde quis ipsum numquam libero earum quod voluptatibus omnis aliquam veniam optio, suscipit
+        </p>
+        <div class="div">
+            <img id="img-fof" src="https://i.pinimg.com/736x/fa/03/ee/fa03ee8030239529e85ab03e5169b32e.jpg" alt="Foto de gato fofo" width="260">
+            <br>
+            <div class="div-lista">
+                
+                <ul class="lista" style="padding: 5px;">
+                    <li>É um gato mto fofo</li>
+                    <li>Bem bonitinho</li>
+                    <li>E ainda por cima é roxo bem escuro</li>
+                </ul>
+            </div>
+            <input id="input" type="Digite algo aqui..." name="input-algo" id="input-algo">
+        </div>
     </body>
 </html>
