Desafio de alinhamento e espaçamento

--- a/Aula3/index.html
+++ b/Aula3/index.html
@@ -8,11 +8,12 @@
 </head>
 <body>
     <div class="conteudo"></div>
+
     <nav>
         <div class="quadrado"></div>
     
         <div class="quadradinho">
-            <img src="icon.jpg" alt="icon" width="80">
+            <img class="icon" src="icon.jpg" alt="icon" width="80">
         </div>
     </nav>
     
