--- a/Aula3/Desafio_Aula3/index.html
+++ b/Aula3/Desafio_Aula3/index.html
@@ -7,12 +7,9 @@
     <title>Desafio - Aula 3</title>
 </head>
 <body>
-    <main>
+    <main class="container">
         <div class="coluna">
-            <div class="quadrado-azul">
-                <div class="quadrado-laranja"></div>
-                <div class="quadrado-laranja"></div>
-            </div>
+            <div class="quadrado-azul"></div>
             <div class="quadrado-azul"></div>
             <div class="quadrado-azul"></div>
             <div class="quadrado-azul"></div>
