Hello World em React

--- a/Aula4/index.html
+++ b/Aula4/index.html
@@ -8,6 +8,7 @@
     <title>React</title>
 </head>
 <body>
+    <div class="test"></div>
     <main class="container">
         <header>
             <img class="header-icon" src="header-icon.png" alt="Cheshire Cat header icon" width="100">
