5th Class, learning JavaScript

--- a/Aula5/index.html
+++ b/Aula5/index.html
@@ -3,11 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Aula de JavaScript</title>
     
 </head>
 <body>
+    <input type="color" name="" id="input">
 
-    <script src="script.js"></script> // js sempre fica no final do html
+
+    <div class="square ok" id="square">
+        <h1 class="textSquare">Square</h1>
+    </div>
+    <button onclick="changeColor()">Trocar Cor</button>
+
+    <script src="script.js"></script>
 </body>
 </html>
