--- a/05 Introdução Java Script/index.html
+++ b/05 Introdução Java Script/index.html
@@ -8,13 +8,16 @@
     
 </head>
 <body>
-    <input type="color" name="" id="input">
-
-
-    <div class="square ok" id="square">
-        <h1 class="textSquare">Square</h1>
-    </div>
-    <button onclick="changeColor()">Trocar Cor</button>
+    <main>
+        
+        <div class="square ok" id="square">
+            <h1 class="textSquare">Square</h1>
+        </div>
+        <div class="buttons">
+            <input type="color" name="" id="input">
+            <button onclick="changeColor()">Trocar Cor</button>
+        </div>
+    </main>
 
     <script src="script.js"></script>
 </body>
